mug_grammar.txt
mug_spec      ::= package_spec import_list code_parts symbol_list start_spec production_list

package_spec       ::= PACKAGE multipart_id SEMI 
					   | empty

import_list        ::= import_spec import_list
					| empty


import_spec        ::= IMPORT import_id SEMI

code_part          ::= action_code_part 
					| parser_code_part 
					| init_code 
					| scan_code

code_parts         ::= code_part code_parts
					| empty

action_code_part   ::= ACTION CODE CODE_STRING opt_semi

parser_code_part   ::= PARSER CODE CODE_STRING opt_semi

init_code          ::= INIT WITH CODE_STRING opt_semi

scan_code          ::= SCAN WITH CODE_STRING opt_semi

symbol_list        ::= symbol symbol_list'

symbol_list'       ::= symbol symbol_list'
					| empty					

symbol 				::= TERMINAL opt_type_id
					| NON TERMINAL non_terminal_opt_type_id
					| NONTERMINAL non_terminal_opt_type_id


opt_type_id			::= type_id new_term_id term_name_list SEMI

non_terminal_opt_type_id ::= type_id new_non_term_id non_term_name_list SEMI				


term_name_list 	::= COMMA new_term_id term_name_list
					| empty


non_term_name_list ::= COMMA new_non_term_id  non_term_name_list
					| empty


start_spec         ::= START WITH nt_id SEMI 
					| empty

production_list    ::= production production_list'
					
production_list'   ::= production production_list'
					| empty					

production         ::= nt_id COLON_COLON_EQUALS rhs_list SEMI

rhs_list           ::= rhs rhs_list' 

rhs_list' 		   ::= BAR rhs rhs_list' 
					| empty

rhs                ::= prod_part_list


prod_part_list     ::= prod_part prod_part_list
					| empty

prod_part          ::= symbol_id opt_label 
					| CODE_STRING

opt_label          ::= COLON label_id 
					| empty

multipart_id       ::= ID multipart_id'  { return multipart_id'(ID.lexeme)}

multipart_id'		::= DOT ID multipart_id' { return multipart_id'(arg + DOT.lexeme + ID.lexeme) }
					| empty { return Id(arg) }


import_multipart_id ::= DOT import_multipart_id'
					 | empty
					 
import_multipart_id' ::= ID import_multipart_id
					  | STAR
					
import_id          ::= ID import_multipart_id
							

type_id            ::= multipart_id { return multipart_id}

term_id            ::= symbol_id { return symbol_id() }

new_term_id        ::= ID { return Id(lexem) }

new_non_term_id    ::= ID { return Id(lexem) }

nt_id              ::= ID { return Id(lexem) }

symbol_id          ::= ID { return Id(lexem) }

label_id           ::= ID { return Id(lexem) }

opt_semi	   ::= SEMI 
				| empty
